<resources>
    <string name="app_name">Unit Converter</string>
    <string name="mantra_convert_everything">Convert everything</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">Select unit</string>
    <string name="delete_last_digit">Delete last digit</string>
    <string name="nav_converters">Converters</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nav_add_measure">Add measure</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_theme_list_titles">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
        <item>Grey</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="error_no_units">No units in this file</string>
    <string name="error_no_file">File not found</string>
    <string name="error_no_json_file">Only json file</string>
    <string name="error_no_permissions">No permission to load file</string>
    <string name="clear_text">Clear</string>
    <string name="nav_about">About</string>
    <string name="ok">OK</string>
    <string name="website">adamzielonka.pro</string>
    <string name="delete_title">Delete</string>
    <string name="delete_measure_title">Delete measure</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="empty_converters">Add converters to use them</string>
    <string name="save_converter">Save to downloads</string>
    <string name="success_save_to_downloads">Saved to downloads</string>
    <string name="error_create_file">Unable to save file</string>
    <string name="error_no_permissions_to_write_file">No permission to write file</string>
    <string name="title_activity_edit_measure">Edit measure</string>
    <string name="edit_converter">Edit</string>
    <string name="title_activity_edit_unit">Edit unit</string>
    <string name="list_title_units">Units</string>
    <string name="list_title_prefixes">Prefixes</string>
    <string name="list_title_Measure">Measure</string>
    <string name="list_item_name">Name</string>
    <string name="list_title_unit">Unit</string>
    <string name="list_item_description">Description</string>
    <string name="list_item_symbol">Symbol</string>
    <string name="list_item_formula">Formula</string>
    <string name="list_title_exponentiation_base">Exponentiation base</string>
    <string name="list_item_units_order">Order of units</string>
    <string name="dialog_measure_name">Measure name</string>
    <string name="dialog_save">Save</string>
    <string name="title_activity_edit_order_units">Edit order of units</string>
    <string name="set_unit_up">Set unit up</string>
    <string name="set_unit_down">Set unit down</string>
    <string name="title_activity_edit_prefix">Edit prefix</string>
    <string name="list_title_prefix">Prefix</string>
    <string name="list_item_exponent">Exponent</string>
    <string name="list_item_add_unit">Add unit</string>
    <string name="list_item_add_prefix">Add prefix</string>
    <string name="error_could_not_save_changes">Could not save changes</string>
    <string name="dialog_unit_symbol">Unit symbol</string>
    <string name="delete_unit_title">Delete unit</string>
    <string name="title_activity_edit_description">Edit description</string>
    <string name="list_title_description">Description</string>
    <string name="list_item_description_base">Base</string>
    <string name="list_item_description_global_prefix">Global prefix</string>
    <string name="title_activity_formula_description">Edit formula</string>
    <string name="list_item_formula_one">One</string>
    <string name="list_item_formula_shift1">Shift 1</string>
    <string name="list_item_formula_shift2">Shift 2</string>
    <string name="list_title_formula">Formula</string>
    <string name="list_item_formula_description">ONE * ( BASE + SHIFT1) + SHIFT2</string>
    <string name="error_symbol_prefix_already_exist">Symbol prefix already exist</string>
    <string name="error_symbol_unit_already_exist">Symbol unit already exist</string>
    <string name="dialog_prefix_symbol">Prefix symbol</string>
    <string name="dialog_prefix_description">Prefix description</string>
    <string name="dialog_prefix_exponent">Prefix exponent</string>
    <string name="dialog_unit_exponentiation_base">Unit exponentiation base</string>
    <string name="title_activity_add_measure">Add measure</string>
    <string name="list_add_measure">Measure</string>
    <string name="list_item_create">Create</string>
    <string name="list_item_load_from_json">Get from json file</string>
    <string name="list_item_json_repo">Get sample json files</string>
    <string name="list_item_load_form_cloud">Get from cloud</string>
    <string name="list_item_create_description">Create by measure editor</string>
    <string name="list_item_load_from_json_description">Load a json file with a specific structure</string>
    <string name="list_item_json_repo_description">See the sample file on the website</string>
    <string name="list_item_load_form_cloud_description">Soon, maybe</string>
    <string name="title_activity_cloud_list">CloudListActivity</string>
    <string name="dialog_formula_one">One</string>
    <string name="dialog_formula_shift1">Shift 1</string>
    <string name="dialog_formula_shift2">Shift 2</string>
    <string name="dialog_unit_description_base">Description base</string>
    <string name="dialog_unit_description_global_prefix">Description global prefix</string>
    <string name="empty_units">Add units to use them</string>
    <string name="list_item_measure_default_1">Default 1</string>
    <string name="list_item_measure_default_2">Default 2</string>
    <string name="dialog_measure_default_1">Default 1</string>
    <string name="dialog_measure_default_2">Default 2</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_measure">My Measures</string>
    <string name="heading_my_top_measure">My Top Measures</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="upload_converter">Upload to cloud</string>
    <string name="msg_succes_upload">Upload succes</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
</resources>