<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context="pro.adamzielonka.converter.activities.AboutActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@mipmap/ic_start" />

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageViewAppLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="7dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewAppName"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonWWW"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewAppLogo"
            android:layout_centerHorizontal="true"
            android:onClick="onClickWebsite"
            android:text="@string/website"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonOK"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onClickOK"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>