<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pro.adamzielonka.converter.activities.DrawerActivity"
    tools:showIn="@layout/app_bar_drawer">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:prompt="@string/spinner_title"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/textFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerTo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:prompt="@string/spinner_title"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/textTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:text="0"
                    android:textAlignment="textEnd"
                    android:textIsSelectable="true"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="99">

                        <Button
                            android:id="@+id/button7"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="7"
                            android:text="7"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button8"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="8"
                            android:text="8"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button9"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="9"
                            android:text="9"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="99">

                        <Button
                            android:id="@+id/button4"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="4"
                            android:text="4"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button5"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="5"
                            android:text="5"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button6"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="6"
                            android:text="6"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonClearOutput"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onClickClear"
                        app:srcCompat="@drawable/ic_clear_white_24dp"
                        android:contentDescription="@string/clear_text"  />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="99">

                        <Button
                            android:id="@+id/button1"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="1"
                            android:text="1"
                            android:textSize="14sp"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button2"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="2"
                            android:text="2"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button3"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="3"
                            android:text="3"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="99">

                        <Button
                            android:id="@+id/buttonPlusMinus"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickChangeSign"
                            android:tag="+-"
                            android:text="±"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/button0"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickDigit"
                            android:tag="0"
                            android:text="0"
                            tools:ignore="HardcodedText" />

                        <Button
                            android:id="@+id/buttonComa"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="33"
                            android:onClick="onClickComa"
                            android:text=","
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonDeleteLast"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onClickDeleteLast"
                        android:tag="◀"
                        app:srcCompat="@drawable/ic_backspace_white_24dp"
                        android:contentDescription="@string/delete_last_digit" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
